# myplotlib

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  shell.nix  test.ipynb
.github/workflows/: publish.yml  pypi-publish.yml
extra/: fontpatch.py
myplotlib/: __init__.py  plots.py  tests.py
myplotlib/assets/: classic.dark.mplstyle  classic.light.mplstyle  fancy.dark.mplstyle  fancy.light.mplstyle  guttenberg.dark.mplstyle  guttenberg.light.mplstyle  hershey.dark.mplstyle  hershey.light.mplstyle  latex.mplstyle  main.mplstyle  mono.dark.mplstyle  mono.light.mplstyle  my.mplstyle
myplotlib/assets/colormaps/: bipolar.csv  colt.csv  fire.csv  idl.csv  sunrise.csv  thermal.csv  vanilla.csv
myplotlib/assets/styles/: _base.mplstyle  _extraticks.base.mplstyle  _fonts.classic.mplstyle  _fonts.garamond.mplstyle  _fonts.literaturnaya.mplstyle  _fonts.mono.mplstyle  _fonts.operina.mplstyle  _palette.classic.dark.mplstyle  _palette.classic.light.mplstyle  _palette.fancy.dark.mplstyle  _palette.fancy.light.mplstyle  _palette.guttenberg.dark.mplstyle  _palette.guttenberg.light.mplstyle  _style.guttenberg.mplstyle  _style.latex.mplstyle  _style.soviet.mplstyle  _theme.fancy.dark.mplstyle  _theme.guttenberg.dark.mplstyle  _theme.guttenberg.light.mplstyle  _ticksin.base.mplstyle  _ticksout.base.mplstyle
myplotlib/previews/: README.md  export_previews.py
myplotlib/tools/: lic.py
previews/: README.md  export_previews.py
src/: plots.py
