[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myplotlib"
dynamic = ["version"]
dependencies = ["matplotlib>=3.0.0", "numpy", "numba>=0.57.0"]
requires-python = ">=3.8"
authors = [{ name = "Hayk", email = "haykh.astro@gmail.com" }]
maintainers = [{ name = "Hayk", email = "haykh.astro@gmail.com" }]
description = "`matplotlib` binder with custom styles and routines for fast plotting"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
"Development Status :: 5 - Production/Stable",
"Intended Audience :: Science/Research",
"Intended Audience :: Education",
"Topic :: Scientific/Engineering :: Visualization",
"Framework :: Matplotlib",
"License :: OSI Approved :: BSD License",
"Programming Language :: Python :: 3 :: Only",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/haykh/myplotlib"

[tool.hatch.version]
path = "myplotlib/__init__.py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["myplotlib/assets", "myplotlib/assets/fonts", "myplotlib/assets/colormaps"]
