[metadata]
name = myplotlib
version = attr: myplotlib.__version__
url = https://github.com/haykh/myplotlib
description = `matplotlib` binder with custom styles and routines for fast plotting
long_description = file: README.md
long_description_content_type = text/markdown
author = morninbru
author_email = haykh.astro@gmail.com
license = BSD 3-Clause License

[options]
zip_safe = True
python_requires = >=3.6, <3.11
packages = find:
include_package_data = True
install_requires = 
    matplotlib>=3.0.0
    numpy
    numba

[options.package_data]
myplotlib = assets/colormaps/*.csv, fonts/*.ttf, *.mplstyle

[options.extras_require]
dev = 
    black
